Fix image stretch issue on hero banner slider

--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -860,6 +860,8 @@ footer{width:100%;background:url(../images/footer-tail.gif) center top repeat-x 
 .img_responsive {
 	width: 100%;
 	height: auto;
+	object-fit: cover;
+	object-position: top;
 }
 .no-marg {
 	margin:0;
